# 8080-sokol

./: .gitignore  CMakeLists.txt  README.md
src/: audio.cpp  audio.hpp  bus.hpp  cpu.cpp  cpu.hpp  disassembler.cpp  disassembler.hpp  main_emu.cpp
